fixed spacing bug on FAQs page for H2.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h1 {
 
 h2 {
     color: #303A97;
-    padding-top: 15px;
+    padding-top: 17px;
     padding-left: 10px;
 }
 
@@ -211,7 +211,7 @@ a.hero-button {
 
 .faqs-section {
     background-color: #f8f8ff;
-    padding-top: 85px;
+    padding-top: 50px;
 }
 
 .faqs-style {
